app/analytics/base/analytic-ui-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    alpha.image.policy.openshift.io/resolve-names: '*'
    app.openshift.io/connects-to: analytic-listener
    app.openshift.io/vcs-ref: master
    app.openshift.io/vcs-uri: https://github.com/gnunn1/seating
    image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"analytic-ui:latest"},"fieldPath":"spec.template.spec.containers[?(@.name==\"analytic-ui\")].image"}]'
  labels:
    app: analytics
    app.kubernetes.io/component: analytic-ui
    app.kubernetes.io/instance: analytic-ui
    app.kubernetes.io/name: analytic-ui
    app.kubernetes.io/part-of: analytics
    app.openshift.io/runtime: nodejs
    app.openshift.io/runtime-version: "10"
  name: analytic-ui
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: analytic-ui
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: analytic-ui
        deploymentconfig: analytic-ui
    spec:
      containers:
      - image: image-registry.openshift-image-registry.svc:5000/seating/analytic-ui
        imagePullPolicy: Always
        name: analytic-ui
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
