app/analytics/base/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: analyticdb
  labels:
    app: analytics
    app.kubernetes.io/name: analytic
    app.kubernetes.io/component: database
    app.kubernetes.io/part-of: analytics
    app.kubernetes.io/instance: analyticdb
    app.openshift.io/runtime: mariadb
spec:
  replicas: 1
  selector:
    matchLabels:
       name: analyticdb
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        alpha.image.policy.openshift.io/resolve-names: '*'
      labels:
        name: analyticdb
    spec:
      containers:
        - name: analyticdb
          image: registry.redhat.io/rhel8/mariadb-103:1
          imagePullPolicy: Always
          ports:
          - containerPort: 3306
          readinessProbe:
            exec:
              command:
              - /bin/sh
              - -i
              - -c
              - MYSQL_PWD="$MYSQL_PASSWORD" mysql -h 127.0.0.1 -u $MYSQL_USER -D $MYSQL_DATABASE
                -e 'SELECT 1'
            initialDelaySeconds: 5
            timeoutSeconds: 1
          livenessProbe:
            initialDelaySeconds: 30
            tcpSocket:
              port: 3306
            timeoutSeconds: 1
          volumeMounts:
          - mountPath: /var/lib/mysql/data
            name: analyticdb-data
          - mountPath: /opt/app-root/src/mysql-init/90-init-data.sh
            name: analyticdb-init
            subPath: 90-init-database.sh
          - mountPath: /opt/app-root/src/mysql-data/schema.sql
            name: analyticdb-init
            subPath: schema.sql
      volumes:
      - name: analyticdb-data
        persistentVolumeClaim:
          claimName: analyticdb
      - configMap:
          name: analyticdb-init
        name: analyticdb-init
