app/analytics/base/analytic-listener-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: analytics
    app.kubernetes.io/component: analytic-listener
    app.kubernetes.io/instance: analytic-listener
    app.kubernetes.io/name: analytic-listener
    app.kubernetes.io/part-of: analytics
    app.openshift.io/runtime: camel
  name: analytic-listener
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: 8443-tcp
    port: 8443
    protocol: TCP
    targetPort: 8443
  - name: 8778-tcp
    port: 8778
    protocol: TCP
    targetPort: 8778
  selector:
    app: analytic-listener
    deploymentconfig: analytic-listener
  sessionAffinity: None
  type: ClusterIP
