app/analytics/base/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: analyticdb
  labels:
    app: analytics
    app.kubernetes.io/name: analytic
    app.kubernetes.io/component: database
    app.kubernetes.io/part-of: analytics
    app.kubernetes.io/instance: analyticdb
    app.openshift.io/runtime: mariadb
spec:
  ports:
  - name: tcp
    port: 3306
  selector:
    name: analyticdb
