app/analytics/base/analytic-ui-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: analytics
    app.kubernetes.io/component: analytic-ui
    app.kubernetes.io/instance: analytic-ui
    app.kubernetes.io/name: analytic-ui
    app.kubernetes.io/part-of: analytics
    app.openshift.io/runtime: nodejs
    app.openshift.io/runtime-version: "10"
  name: analytic-ui
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: analytic-ui
    weight: 100
  wildcardPolicy: None
